--- a/package.json
+++ b/package.json
@@ -1,18 +1,23 @@
 {
-    "name": "todo-app",
-    "version": "1.0.0",
-    "description": "Simple To-Do List app with Node.js and MongoDB",
-    "main": "server.js",
-    "scripts": {
-        "start": "node server.js",
-        "dev": "nodemon server.js"
-    },
-    "dependencies": {
-        "express": "^4.18.2",
-        "mongoose": "^7.0.0",
-        "cors": "^2.8.5"
-    },
-    "devDependencies": {
-        "nodemon": "^2.0.22"
-    }
+    "version": 2,
+    "builds": [
+        {
+            "src": "server.js",
+            "use": "@vercel/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/api/(.*)",
+            "dest": "server.js"
+        },
+        {
+            "src": "/(.*)",
+            "dest": "public/$1"
+        },
+        {
+            "src": "/",
+            "dest": "public/index.html"
+        }
+    ]
 }
